# lotus

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-07-21-agent-notification-policy.md  2026-07-21-system-notification-setting.md  2026-07-21-terminal-output-backpressure.md  2026-07-22-agent-turn-notification-and-terminal-fit.md  2026-07-22-split-completion-notifications.md
docs/superpowers/specs/: 2026-07-21-agent-notification-policy-design.md
frontend/: agent-policy.js  app.js  index.html  notification-settings.js  notification-settings.test.js  styles.css  terminal-output.js  terminal-output.test.js
packaging/: build-deb.sh  lotus.desktop
src/: config.rs  ipc.rs  main.rs  pty.rs  shell_integration.rs  storage.rs  theme.rs
src/term/: manager.rs  mod.rs  output_flow.rs
tests/frontend/: agent-policy.test.js  app-agent-integration.test.js
